<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog"
    android:layout_margin="24dp"
    android:padding="@dimen/space_xl">

    <TextView
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/confirm_delete_models_title"
        android:textColor="@color/text" android:textSize="@dimen/text_lg"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/space_xs" />

    <TextView
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/select_models_to_delete"
        android:textColor="@color/text2" android:textSize="@dimen/text_sm"
        android:layout_marginBottom="@dimen/space_lg" />

    <LinearLayout android:id="@+id/deleteModelList"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/space_lg" />

    <TextView android:id="@+id/deleteModelsEmpty"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:text="@string/no_models_to_delete"
        android:textColor="@color/text3" android:textSize="@dimen/text_sm"
        android:gravity="center"
        android:layout_marginBottom="@dimen/space_lg"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="horizontal" android:gravity="end">
        <TextView android:id="@+id/deleteModelsCancel"
            android:layout_width="wrap_content" android:layout_height="@dimen/btn_height"
            android:gravity="center"
            android:text="@string/cancel" android:textColor="@color/text2"
            android:textSize="@dimen/text_sm"
            android:background="@drawable/bg_btn_ghost"
            android:paddingHorizontal="@dimen/space_xl"
            android:layout_marginEnd="@dimen/space_sm" />
        <TextView android:id="@+id/deleteModelsConfirm"
            android:layout_width="wrap_content" android:layout_height="@dimen/btn_height"
            android:gravity="center"
            android:text="@string/delete" android:textColor="@color/accent_text"
            android:textSize="@dimen/text_sm" android:textStyle="bold"
            android:background="@drawable/bg_btn_primary"
            android:paddingHorizontal="@dimen/space_xl" />
    </LinearLayout>
</LinearLayout>
